--- a/module/User/view/user/user/add.phtml
+++ b/module/User/view/user/user/add.phtml
@@ -15,13 +15,13 @@
   <table class="table">
  <tr>
      <td>
-         <?php  echo $this->formRow($form->get('email')); ?>
+         <?php  echo $this->formRow($form->get('e_email')); ?>
      </td>
      
  </tr>
   <tr>
      <td>
-         <?php  echo $this->formRow($form->get('password')); ?>
+         <?php  echo $this->formRow($form->get('e_password')); ?>
      </td>
    </tr>  
   <tr>
@@ -31,7 +31,7 @@
  </tr> 
   <tr>
         <td>
-         <?php  echo $this->formRow($form->get('type')); ?>
+         <?php  echo $this->formRow($form->get('e_type')); ?>
      </td>
  </tr>
  </table>
