--- a/module/User/view/user/user/index.phtml
+++ b/module/User/view/user/user/index.phtml
@@ -17,7 +17,7 @@
  </tr>
  <?php foreach ($users as $user) : ?>
  <tr>
-     <td><?php echo $this->escapeHtml($user->email);?></td>
+     <td><?php echo $this->escapeHtml($user->e_email);?></td>
      <td>
          <a href="<?php echo $this->url('user',
              array('action'=>'edit', 'id' => $user->id));?>">Edit</a>
